Remove unused methods, imports, and factories; refactor test cases for readability and consistency.